--- a/Sahabi/AppShell.xaml
+++ b/Sahabi/AppShell.xaml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <Shell
-    x:Class="IslamPartner.AppShell"
+    x:Class="Sahabi.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:IslamPartner"
+    xmlns:local="clr-namespace:Sahabi"
     Shell.FlyoutBehavior="Disabled"
-    Title="IslamPartner">
+    Title="Sahabi">
 
     <ShellContent
         Title="Home"
